changed removeFirst() to remove(0) in Task A ArrayList